--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,5 @@
 {
-	"username": "Excalith",
+	"username": "Metro",
 	"theme": {
 		"name": "Default",
 		"backgroundColor": "#121317",
@@ -22,8 +22,8 @@
 		"blur": false
 	},
 	"terminal": {
-		"fixedHeight": true,
-		"windowGlow": true,
+		"fixedHeight": false,
+		"windowGlow": false,
 		"windowGlowColor": "#291f3325",
 		"textGlow": false,
 		"opacity": 0,
@@ -65,7 +65,7 @@
 		"hoverColor": "magenta"
 	},
 	"search": {
-		"default": "https://google.com/search?q=",
+		"default": "https://duckduckgo.com/?q=",
 		"target": "_self",
 		"shortcutRegex": "([A-Za-z0-9]+) (.*)",
 		"shortcuts": [
@@ -115,23 +115,23 @@
 				"links": [
 					{
 						"name": "Portfolio",
-						"url": "https://cancellek.com",
-						"icon": "mdi:web"
+						"url": "https://sumitkr.vercel.app/",
+						"icon": "https://sumitkr.vercel.app/"
 					},
 					{
-						"name": "Keybase",
-						"url": "https://keybase.io/",
-						"icon": "fa-brands:keybase"
+						"name": "Monkeytype",
+						"url": "https://monkeytype.com/",
+						"icon": "https://monkeytype.com/"
 					},
 					{
-						"name": "GPT",
+						"name": "ChatGPT",
 						"url": "https://chat.openai.com/",
-						"icon": "simple-icons:openai"
+						"icon": "https://chat.openai.com/"
 					},
 					{
-						"name": "OCI",
-						"url": "https://www.oracle.com/cloud/",
-						"icon": "simple-icons:oracle"
+						"name": "Claude",
+						"url": "https://claude.ai/",
+						"icon": "https://claude.ai/"
 					}
 				]
 			},
@@ -142,77 +142,77 @@
 				"links": [
 					{
 						"name": "GitHub",
-						"url": "https://github.com",
-						"icon": "mdi:github"
+						"url": "https://github.com/",
+						"icon": "https://github.com/"
 					},
 					{
 						"name": "GitLab",
-						"url": "https://gitlab.com",
-						"icon": "ph:gitlab-logo-simple-fill"
+						"url": "https://gitlab.com/",
+						"icon": "https://gitlab.com/"
 					},
 					{
 						"name": "Dev.to",
-						"url": "https://dev.to",
-						"icon": "material-symbols:logo-dev"
+						"url": "https://dev.to/",
+						"icon": "https://dev.to/"
 					},
 					{
 						"name": "Stack Overflow",
 						"url": "https://stackoverflow.com/",
-						"icon": "mdi:stack-overflow"
+						"icon": "https://stackoverflow.com/"
 					}
 				]
 			},
 			{
-				"title": "Social",
+				"title": "Design",
 				"color": "cyan",
 				"align": "left",
 				"links": [
 					{
-						"name": "Twitter",
-						"url": "https://twitter.com",
-						"icon": "mdi:twitter"
+						"name": "Dribbble",
+						"url": "https://dribbble.com/",
+						"icon": "https://dribbble.com/"
 					},
 					{
-						"name": "Mastodon",
-						"url": "https://mastodon.social/",
-						"icon": "ri:mastodon-fill"
+						"name": "Behance",
+						"url": "https://behance.net/",
+						"icon": "https://behance.net/"
 					},
 					{
-						"name": "Reddit",
-						"url": "https://reddit.com",
-						"icon": "mdi:reddit"
+						"name": "Example",
+						"url": "http://example.com/",
+						"icon": "http://example.com/"
 					},
 					{
-						"name": "Polywork",
-						"url": "https://polywork.com",
-						"icon": "simple-icons:polywork"
+						"name": "Example",
+						"url": "http://example.com/",
+						"icon": "http://example.com/"
 					}
 				]
 			},
 			{
-				"title": "Gaming",
+				"title": "Hosts",
 				"color": "red",
 				"align": "left",
 				"links": [
 					{
-						"name": "Polygon",
-						"url": "https://polygon.com",
-						"icon": "uil:polygon"
+						"name": "Hostinger",
+						"url": "https://www.hostinger.in/",
+						"icon": "https://www.hostinger.in/"
 					},
 					{
-						"name": "IGN",
-						"url": "https://ign.com",
-						"icon": "mdi:currency-sign"
+						"name": "Netlify",
+						"url": "https://www.netlify.com/",
+						"icon": "https://www.netlify.com/"
 					},
 					{
-						"name": "RPS",
-						"url": "https://rockpapershotgun.com/",
-						"icon": "ph:toilet-paper-bold"
+						"name": "Vercel",
+						"url": "https://vercel.com/",
+						"icon": "https://vercel.com/"
 					},
 					{
-						"name": "80lv",
-						"url": "https://80.lv/",
-						"icon": "tabler:hand-rock"
+						"name": "Example",
+						"url": "http://example.com/",
+						"icon": "http://example.com/"
 					}
 				]
 			},
@@ -224,22 +224,22 @@
 					{
 						"name": "PopSci",
 						"url": "https://popsci.com/",
-						"icon": "material-symbols:science"
+						"icon": "https://popsci.com/"
 					},
 					{
 						"name": "Space",
-						"url": "fa6-solid:user-astronaut",
-						"icon": "mdi:reddit"
+						"url": "https://reddit.com/",
+						"icon": "https://reddit.com/"
 					},
 					{
 						"name": "NASA",
 						"url": "https://blogs.nasa.gov/",
-						"icon": "simple-icons:nasa"
+						"icon": "https://blogs.nasa.gov/"
 					},
 					{
 						"name": "ESA",
 						"url": "https://blogs.esa.int/",
-						"icon": "mdi:black-mesa"
+						"icon": "https://blogs.esa.int/"
 					}
 				]
 			},
@@ -251,22 +251,22 @@
 					{
 						"name": "TechCrunch",
 						"url": "https://techcrunch.com/",
-						"icon": "game-icons:techno-heart"
+						"icon": "https://techcrunch.com"
 					},
 					{
 						"name": "Verge",
 						"url": "https://www.theverge.com/",
-						"icon": "arcticons:verge"
+						"icon": "https://www.theverge.com/"
 					},
 					{
 						"name": "It's Foss",
 						"url": "https://itsfoss.com/",
-						"icon": "ri:mastodon-fill"
+						"icon": "https://itsfoss.com/"
 					},
 					{
 						"name": "9To5 Linux",
 						"url": "https://9to5linux.com/",
-						"icon": "uil:linux"
+						"icon": "https://9to5linux.com/"
 					}
 				]
 			}
