--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
         "react-device-detect": "^2.2.3",
         "react-dom": "18.2.0",
         "react-error-boundary": "^4.0.12"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
